mateusz/footer - dodanie ikonek

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
     "styled-components": "^4.4.0"
   },
   "devDependencies": {
@@ -38,9 +39,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "git+https://github.com/gatsbyjs/gatsby-starter-default.git"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  },
+  "homepage": "https://github.com/gatsbyjs/gatsby-starter-default#readme",
+  "main": "gatsby-browser.js"
 }
