--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-dom": "^16.10.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
-    "styled-components": "^4.4.0"
+    "react-scroll": "^1.7.14",
+    "styled-components": "^4.4.0",
+    "styled-icons": "^8.5.1"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
