--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^3.7.0",
     "react-on-screen": "^2.1.1",
     "react-scroll": "^1.7.14",
+    "react-visibility-sensor": "^5.1.1",
     "styled-components": "^4.4.0",
     "styled-icons": "^8.5.1"
   },
