--- a/package.json
+++ b/package.json
@@ -39,6 +39,13 @@
     "universal-cookie": "^4.0.3"
   },
   "devDependencies": {
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "gh-pages": "^2.2.0",
     "prettier": "^1.19.1"
   },
